2.62 crash in Replace Mesh #30555

Closed
opened 2012-03-15 18:05:21 +01:00 by Andrey Kashlak · 4 comments

%%%Video - http://youtu.be/dNrAnzcENWk

  1. Open Blender
  2. Add second cube
  3. Create material without physics
  4. For first cube add actuator Edit object, replace mesh - Cube.001
  5. Enable Phys button
  6. Start game
  7. Activate actuator
  8. Segmentation fault

Debian Squeeze 6.0.4 / Windows 7
32 bit%%%

%%%Video - http://youtu.be/dNrAnzcENWk 1. Open Blender 2. Add second cube 3. Create material without physics 4. For first cube add actuator Edit object, replace mesh - Cube.001 5. Enable Phys button 6. Start game 7. Activate actuator 8. Segmentation fault Debian Squeeze 6.0.4 / Windows 7 32 bit%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'm attaching a sample file that demonstrates the crash and a patch that fixes it. Assigning to Benoit so he can double check the patch.%%%

%%%I'm attaching a sample file that demonstrates the crash and a patch that fixes it. Assigning to Benoit so he can double check the patch.%%%
Member

%%%committed in revision #45657.

Note that the proposed patch fix will have the side of keeping the previous physics shape, which is not quite correct, but is acceptable for this unusual situation.

Thanks for the patch.%%%

%%%committed in revision #45657. Note that the proposed patch fix will have the side of keeping the previous physics shape, which is not quite correct, but is acceptable for this unusual situation. Thanks for the patch.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30555
No description provided.